--- a/css/reader.css
+++ b/css/reader.css
@@ -6,7 +6,7 @@ body {
 	height: 100%;
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
-	overflow: hidden;
+	overflow:hidden;
 }
 .pan1 {
 	background-color: #00d9b8;
@@ -36,20 +36,24 @@ body {
 .feedHeader
 {
 	
-	background-color: black;
-	font-size:14px;
-	font-weight:bold;
+	background-color: #101010;
+	font-size:10px;
+	font-weight:normal;
 	position: relative;
+	margin-right:auto;
+	margin-left:auto;
 	height: 100%;
-	width: 100%;
+	width: 80%;
 	text-align:center;	
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding: 8px 8px 8px 8px;
+	border:1px solid #101010;
 	z-index: 1;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-
+	top:95%;
+	-webkit-box-shadow:2px 2px 4px #000;
+	
 }
 .entry
 {
@@ -71,11 +75,15 @@ body {
 	width: 256px;
 	height: 100%;
 	display: inline;
+	float:left;
+	padding-left:8px;
+	padding-right:8px;
 }
 
 .feedContent {
 	position: relative;
 	width: 100%;
+	
 	height: auto;
 	
 }
@@ -110,4 +118,35 @@ a {
 .date {
 	color: #565248;
 	font-size: 9px;
+}
+
+.footerReader{
+	position:absolute;
+	bottom:0px;
+	width:100%;
+	background-color: black;
+	z-index: 1;
+	
+}
+
+.shelfReader
+{
+	height: 100%;
+	width: 256px;
+	text-align:center;	
+	padding-top: 10px;
+	padding-bottom: 10px;
+	z-index: 2;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	color:gray;
+	font-size:14px;
+	font-weight:bold;
+	float:left;
+}
+
+.shelfReaderAct
+{
+	color:white;
 }
